refactor(Convert): 같은 클래스 메서드 호출에 사용된 클래스명 삭제, 스트림의 toList 형식 통일