@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class Convert {
 
@@ -18,7 +17,7 @@ public class Convert {
 
     public static List<String> stringToList(String input) {
         return Arrays.stream(input.split(","))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static Map<String, Integer> listToMapWithSplit(List<String> nonSplitOrders, String errorMessage) {
@@ -26,7 +25,7 @@ public class Convert {
         for (String nonSplitOrder : nonSplitOrders) {
             List<String> splitOrder = Arrays.stream(nonSplitOrder.split("-"))
                     .toList();
-            orders.put(splitOrder.get(0), Convert.stringToInteger(splitOrder.get(1), errorMessage));
+            orders.put(splitOrder.get(0), stringToInteger(splitOrder.get(1), errorMessage));
         }
         return orders;
     }
